bk_ida/gccida/g1/subst_constants
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:2951:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:2979:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:2986:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+2Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:2987:4: error: expected ';' after expression
rtx inner; // [rsp+38h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:2987:5: error: use of undeclared identifier 'inner'
rtx inner; // [rsp+38h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3005:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)v5->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3006:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20 = ( __int64)v5[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3008:30: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)v20 == 74 && mode_class_0[*( unsigned __int8 *)( v20 + 2)] == MODE_CC ) 
                             ^~~~~~~~~~~~
                             mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3015:25: error: expected expression
subst_constants( ( rtx *)&v5[1], insn, map, memonly); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3016:13: error: expected ';' after expression
v22 = ( rtx)v5[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3017:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v23.rtwint = ( __int64)v5->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3025:25: error: expected expression
subst_constants( ( rtx *)( v23.rtwint + 16), insn, map, memonly); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3026:25: error: expected expression
subst_constants( ( rtx *)( fld->rtwint + 24), insn, map, memonly); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3035:25: error: expected expression
subst_constants( ( rtx *)( v23.rtwint + 8), insn, map, 0); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3046:34: error: use of undeclared identifier 'machine_mode'
v35 = gen_lowpart_if_possible( ( machine_mode)v33, v22); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3070:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v36.rtwint = ( __int64)v22->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3095:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)v22 + 2)] == MODE_CC 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3105:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)v5->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/integrate.c:3107:25: error: expected expression
subst_constants( ( rtx *)( v8.rtwint + 8), insn, map, 0); 
                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_constants/src/obj/integrate.o] Error 1
